--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 
     <title>Inicio</title>
 </head>
+
+<div class="fondoUno">
 <body>
     <header class="container-fluid">
         <div class="row">
             <div>
                 <a class="enlaces link-light"  href="index.html"><h1>Mercado Libre<span>_Crypto</span></h1></a>
             </div>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg bg-success">
                 <div class="container-fluid">
                   <button  class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -56,6 +58,40 @@
             </nav>
         </div>
     </header>
+    <section class="subTituloIndex">     
+            <h2>Graficos</h2>
+    </section>  
+
+    
+    <div class="colorFondo">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/graficobtc.PNG" class="d-block w-100" alt="grafico de btc">
+              </div>
+              <div class="carousel-item">
+                <img src="img/ethimg.PNG" class="d-block w-100" alt="gradfico de eth">
+              </div>
+              <div class="carousel-item">
+                <img src="img/graficobtc.PNG" class="d-block w-100" alt="gradico de USDt">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
+</div>
 
     
         <section class="subTitulo">      
